# domainus

./: Application.cpp  Application.h  CMakeLists.txt  README.md  main.cpp  tgbot-v1.8.patch  utils.h
cmake/: cross-mipsel-linux.cmake
scripts/: build-mips  dnsmasq-restart  sysvscript
